# soviet.recipes

./: .gitignore  LICENSE  README.md
.kiro/specs/cookbook-dewarp/: design.md  requirements.md  tasks.md
.kiro/specs/docling-vlm-model-support/: design.md  requirements.md  tasks.md
.kiro/specs/image-batch-processor/: design.md  requirements.md  tasks.md
.kiro/specs/image-preprocessing-pipeline/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
phase_1/post_processing/: IMAGE_PROCESSING_PLAN.md  README.md
phase_2/docling/: README.md  process_documents.py  pyproject.toml
phase_2/docling/output/: pages-13.md  pages-3.doctags.json  pages-3.md
phase_2/image_batch_processor/: README.md  __init__.py  exceptions.py  main.py  pyproject.toml  run_pipeline.py  run_preprocess.py
phase_2/image_batch_processor/config/: __init__.py  settings.py
phase_2/image_batch_processor/core/: __init__.py  factory.py  models.py  processor.py
phase_2/image_batch_processor/engines/: __init__.py  api.py  base.py  docling.py  llm.py  passthrough.py
phase_2/image_batch_processor/flow/: __init__.py  batch_flow.py  state.py
phase_2/image_batch_processor/preprocessing/: dewarp_camera.py  exceptions.py  experiment.py  main.py
phase_2/image_batch_processor/preprocessing/config/: __init__.py  settings.py
phase_2/image_batch_processor/preprocessing/core/: __init__.py  factory.py  models.py  pipeline.py
phase_2/image_batch_processor/preprocessing/stages/: __init__.py  adjustment.py  base.py  contrast.py  deskew.py  dewarp.py  page_split.py  white_balance.py
phase_2/image_batch_processor/preprocessing/utils/: __init__.py  image_io.py  naming.py
phase_2/image_batch_processor/tests/: __init__.py
phase_2/image_batch_processor/tests/unit/: test_config.py  test_factory.py  test_file_utils.py  test_llm.py  test_preprocessing.py  test_preprocessing_image_io.py  test_processor.py  test_state.py
phase_2/image_batch_processor/utils/: __init__.py  file_utils.py  logging.py  preprocessing.py
phase_2/processing_results/: compare_consensus.py  consensus.csv
phase_2/processing_results/docling_easyocr_dualpage/: readme.md
phase_2/processing_results/docling_easyocr_dualpage/docling_doctags/: pages-10.doctags.json  pages-100.doctags.json  pages-101.doctags.json  pages-102.doctags.json  pages-103.doctags.json  pages-104.doctags.json  pages-105.doctags.json  pages-106.doctags.json  pages-107.doctags.json  pages-108.doctags.json  pages-109.doctags.json  pages-11.doctags.json  pages-110.doctags.json  pages-111.doctags.json  pages-112.doctags.json  pages-113.doctags.json  pages-114.doctags.json  pages-115.doctags.json  pages-116.doctags.json  pages-117.doctags.json  pages-118.doctags.json  pages-119.doctags.json  pages-12.doctags.json  pages-120.doctags.json  pages-121.doctags.json  pages-122.doctags.json  pages-123.doctags.json  pages-124.doctags.json  pages-125.doctags.json  pages-126.doctags.json  pages-127.doctags.json  pages-128.doctags.json  pages-129.doctags.json  pages-13.doctags.json  pages-130.doctags.json  pages-131.doctags.json  pages-132.doctags.json  pages-133.doctags.json  pages-134.doctags.json  pages-135.doctags.json  (+181 more)
phase_2/processing_results/docling_easyocr_dualpage/docling_extraction/: pages-10.txt  pages-100.txt  pages-101.txt  pages-102.txt  pages-103.txt  pages-104.txt  pages-105.txt  pages-106.txt  pages-107.txt  pages-108.txt  pages-109.txt  pages-11.txt  pages-110.txt  pages-111.txt  pages-112.txt  pages-113.txt  pages-114.txt  pages-115.txt  pages-116.txt  pages-117.txt  pages-118.txt  pages-119.txt  pages-12.txt  pages-120.txt  pages-121.txt  pages-122.txt  pages-123.txt  pages-125.txt  pages-126.txt  pages-127.txt  pages-128.txt  pages-129.txt  pages-130.txt  pages-131.txt  pages-132.txt  pages-133.txt  pages-134.txt  pages-135.txt  pages-136.txt  pages-137.txt  (+159 more)
phase_2/processing_results/docling_easyocr_dualpage/docling_markdown/: pages-10.md  pages-100.md  pages-101.md  pages-103.md  pages-104.md  pages-105.md  pages-106.md  pages-107.md  pages-108.md  pages-109.md  pages-11.md  pages-110.md  pages-111.md  pages-112.md  pages-113.md  pages-114.md  pages-115.md  pages-116.md  pages-117.md  pages-118.md  pages-119.md  pages-12.md  pages-120.md  pages-121.md  pages-122.md  pages-123.md  pages-124.md  pages-125.md  pages-126.md  pages-127.md  pages-128.md  pages-129.md  pages-13.md  pages-130.md  pages-131.md  pages-132.md  pages-133.md  pages-136.md  pages-137.md  pages-138.md  (+160 more)
phase_2/processing_results/docling_easyocr_dualpage/docling_reports/: pages-100_report.txt  pages-101_report.txt  pages-102_report.txt  pages-103_report.txt  pages-104_report.txt  pages-105_report.txt  pages-106_report.txt  pages-107_report.txt  pages-108_report.txt  pages-109_report.txt  pages-10_report.txt  pages-110_report.txt  pages-111_report.txt  pages-112_report.txt  pages-113_report.txt  pages-114_report.txt  pages-115_report.txt  pages-116_report.txt  pages-117_report.txt  pages-118_report.txt  pages-119_report.txt  pages-11_report.txt  pages-120_report.txt  pages-121_report.txt  pages-122_report.txt  pages-123_report.txt  pages-124_report.txt  pages-125_report.txt  pages-126_report.txt  pages-127_report.txt  pages-128_report.txt  pages-129_report.txt  pages-12_report.txt  pages-130_report.txt  pages-131_report.txt  pages-132_report.txt  pages-133_report.txt  pages-134_report.txt  pages-135_report.txt  pages-136_report.txt  (+184 more)
phase_2/processing_results/docling_easyocr_preprocessed/docling_doctags/: 000-pages-10-a.doctags.json  000-pages-10-b.doctags.json  001-pages-100-a.doctags.json  001-pages-100-b.doctags.json  002-pages-101-a.doctags.json  002-pages-101-b.doctags.json  003-pages-102-a.doctags.json  003-pages-102-b.doctags.json  004-pages-103-a.doctags.json  004-pages-103-b.doctags.json  005-pages-104-a.doctags.json  005-pages-104-b.doctags.json  006-pages-105-a.doctags.json  (+412 more)
phase_2/processing_results/docling_qwen3-vlm-4B_preprocessed/: readme.md
(+2411 files in other folders)
